--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.yuga.course">
+
     <application
-        android:label="SkillUp"
+        android:label="flutter_samples"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
