--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cached_network_image: ^3.2.3
   http: ^1.5.0
   image: ^4.5.4
+  url_launcher: ^6.1.10
 
   cupertino_icons: ^1.0.8
   rive: ^0.13.20
