--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   http: ^1.5.0
   image: ^4.5.4
   url_launcher: ^6.1.10
+  flutter_launcher_icons: ^0.14.4
+  rename: ^3.1.0
 
   cupertino_icons: ^1.0.8
   rive: ^0.13.20
@@ -57,6 +59,10 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/samples/images/topi.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
